[gd_scene load_steps=19 format=3 uid="uid://cm6hici232i7q"]

[ext_resource type="Script" path="res://Scripts/Weapons/Axe.gd" id="1_sjguv"]
[ext_resource type="Texture2D" uid="uid://gy4601icaaos" path="res://Assets/Kenney_Tiny_Dungeon/Tiles/tile_0118.png" id="2_fkl7q"]
[ext_resource type="Script" path="res://Scripts/Hurtbox.gd" id="3_fxion"]
[ext_resource type="Script" path="res://Scripts/Weapons/WeaponAttackSequence.gd" id="4_g7xc6"]
[ext_resource type="Script" path="res://Scripts/States/Attack.gd" id="5_8sjr4"]
[ext_resource type="Script" path="res://Scripts/States/StateNothing.gd" id="6_s2ntd"]

[sub_resource type="CircleShape2D" id="CircleShape2D_i8oqm"]
radius = 13.0

[sub_resource type="CircleShape2D" id="CircleShape2D_pmdsh"]
radius = 64.0

[sub_resource type="Animation" id="Animation_0na2m"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("weapon_offset:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("weapon_offset:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [false],
"method": &"set_active_hurtbox"
}]
}

[sub_resource type="Animation" id="Animation_s6ojg"]
resource_name = "attack_leap"
length = 0.7
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("weapon_offset:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -5), Vector2(0, -5), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("weapon_offset:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.26, 0.32, 0.4, 0.48, 0.56, 0.64, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.785397, 0.785397, -0.906229, -2.35619, -4.31551, -6.26573, -8.63938, -10.5994, -12.5489]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2, 0.68),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [true],
"method": &"set_active_hurtbox"
}, {
"args": [false],
"method": &"set_active_hurtbox"
}]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": ["swing2"],
"method": &"play_sound"
}]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("StateAttackSequence/3:displacement")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2, 0.68),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 3.0, 3.0]
}

[sub_resource type="Animation" id="Animation_s1yo0"]
resource_name = "attack_single_1"
length = 0.3
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("weapon_offset:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 4), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("weapon_offset:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.785398, -0.785397]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.28),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [true],
"method": &"set_active_hurtbox"
}, {
"args": [false],
"method": &"set_active_hurtbox"
}]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": ["swing"],
"method": &"play_sound"
}]
}

[sub_resource type="Animation" id="Animation_tprpp"]
resource_name = "attack_single_2"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("weapon_offset:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 4), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("weapon_offset:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-0.785397, 0.785398]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.28),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [true],
"method": &"set_active_hurtbox"
}, {
"args": [false],
"method": &"set_active_hurtbox"
}]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": ["swing"],
"method": &"play_sound"
}]
}

[sub_resource type="Animation" id="Animation_873dq"]
resource_name = "swap_in"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("weapon_offset:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.35619, 0.785397]
}

[sub_resource type="Animation" id="Animation_ngmvs"]
resource_name = "swap_out"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("weapon_offset:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.785397, 2.35619]
}

[sub_resource type="Animation" id="Animation_ts6x4"]
resource_name = "u_slam"
length = 0.7
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("weapon_offset:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.69),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -4), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("weapon_offset:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 0.69),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 3.66519, 0.0]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5, 0.69),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": ["swing2"],
"method": &"play_sound"
}, {
"args": [],
"method": &"slam"
}]
}

[sub_resource type="Animation" id="Animation_wff0w"]
resource_name = "u_swing"
length = 0.2
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("weapon_offset:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 4), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("weapon_offset:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.785398, -0.785397]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.18),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [true],
"method": &"set_active_hurtbox"
}, {
"args": [false],
"method": &"set_active_hurtbox"
}]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": ["swing"],
"method": &"play_sound"
}]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("StateAttackSequence/1:displacement")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 4.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("weapon_offset:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.02, 0.18, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.5, 1.5), Vector2(1.5, 1.5), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_al1id"]
resource_name = "u_swing_2"
length = 0.2
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("weapon_offset:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 4), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("weapon_offset:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-0.785397, 0.785398]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.18),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [true],
"method": &"set_active_hurtbox"
}, {
"args": [false],
"method": &"set_active_hurtbox"
}]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": ["swing"],
"method": &"play_sound"
}]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("StateAttackSequence/1:displacement")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 4.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("weapon_offset:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.02, 0.18, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.5, 1.5), Vector2(1.5, 1.5), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uyfap"]
_data = {
"RESET": SubResource("Animation_0na2m"),
"attack_leap": SubResource("Animation_s6ojg"),
"attack_single_1": SubResource("Animation_s1yo0"),
"attack_single_2": SubResource("Animation_tprpp"),
"swap_in": SubResource("Animation_873dq"),
"swap_out": SubResource("Animation_ngmvs"),
"u_slam": SubResource("Animation_ts6x4"),
"u_swing": SubResource("Animation_wff0w"),
"u_swing_2": SubResource("Animation_al1id")
}

[node name="axe_root" type="Node2D" node_paths=PackedStringArray("offset", "hurtbox", "anim_player", "attack_sequences")]
script = ExtResource("1_sjguv")
offset = NodePath("weapon_offset")
hurtbox = NodePath("weapon_offset/weapon_parent/hurtbox_Area2D")
anim_player = NodePath("AnimationPlayer")
attack_sequences = [NodePath("StateAttackSequence")]
damage = 3
weapon_texture = ExtResource("2_fkl7q")
charge_max = 0

[node name="weapon_offset" type="Node2D" parent="."]

[node name="weapon_parent" type="Node2D" parent="weapon_offset"]
position = Vector2(0, 24)

[node name="Sprite2D" type="Sprite2D" parent="weapon_offset/weapon_parent"]
rotation = 3.14159
scale = Vector2(1.11812, 1.11812)
texture = ExtResource("2_fkl7q")

[node name="hurtbox_Area2D" type="Area2D" parent="weapon_offset/weapon_parent"]
position = Vector2(0, 1)
collision_layer = 2
collision_mask = 0
script = ExtResource("3_fxion")

[node name="CollisionShape2D" type="CollisionShape2D" parent="weapon_offset/weapon_parent/hurtbox_Area2D"]
shape = SubResource("CircleShape2D_i8oqm")

[node name="u_slam_Area2D" type="Area2D" parent="weapon_offset/weapon_parent"]
collision_layer = 0
collision_mask = 2
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="weapon_offset/weapon_parent/u_slam_Area2D"]
shape = SubResource("CircleShape2D_pmdsh")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_uyfap")
}

[node name="StateAttackSequence" type="Node" parent="." node_paths=PackedStringArray("weapon")]
script = ExtResource("4_g7xc6")
weapon = NodePath("..")
state_name_to_buffer = "idle"

[node name="1" type="Node" parent="StateAttackSequence" node_paths=PackedStringArray("anim_player")]
script = ExtResource("5_8sjr4")
anim_player = NodePath("../../AnimationPlayer")
animation_name = "attack_single_1"
damage = 4
stagger = 2
knockback = 3
next_attack_delay = 0.1

[node name="2" type="Node" parent="StateAttackSequence" node_paths=PackedStringArray("anim_player")]
script = ExtResource("5_8sjr4")
anim_player = NodePath("../../AnimationPlayer")
animation_name = "attack_single_2"
damage = 4
stagger = 2
knockback = 3
next_attack_delay = 0.1
displacement = 1.5

[node name="3" type="Node" parent="StateAttackSequence" node_paths=PackedStringArray("anim_player")]
script = ExtResource("5_8sjr4")
anim_player = NodePath("../../AnimationPlayer")
animation_name = "attack_leap"
damage = 8
stagger = 2
knockback = 3
next_attack_delay = 0.1

[node name="ultimate_swinging" type="Node" parent="." node_paths=PackedStringArray("weapon")]
script = ExtResource("4_g7xc6")
weapon = NodePath("..")
state_name_to_buffer = "swing"

[node name="1" type="Node" parent="ultimate_swinging" node_paths=PackedStringArray("anim_player")]
script = ExtResource("5_8sjr4")
anim_player = NodePath("../../AnimationPlayer")
animation_name = "u_swing"
damage = 2
stagger = 2
knockback = 5
displacement = 1.0

[node name="2" type="Node" parent="ultimate_swinging" node_paths=PackedStringArray("anim_player")]
script = ExtResource("5_8sjr4")
anim_player = NodePath("../../AnimationPlayer")
animation_name = "u_swing_2"
damage = 2
stagger = 2
knockback = 5
displacement = 1.0

[node name="ultimate_slam" type="Node" parent="." node_paths=PackedStringArray("weapon")]
script = ExtResource("4_g7xc6")
weapon = NodePath("..")
state_name_to_buffer = "nothing"

[node name="1" type="Node" parent="ultimate_slam" node_paths=PackedStringArray("anim_player")]
script = ExtResource("5_8sjr4")
anim_player = NodePath("../../AnimationPlayer")
animation_name = "u_slam"
damage = 2
stagger = 2
knockback = 5
next_attack_delay = 1.5

[node name="nothing" type="Node" parent="."]
script = ExtResource("6_s2ntd")

[node name="Berserk_Buff_Applier" type="Node" parent="."]

[node name="Berserk_Buff" type="Node" parent="Berserk_Buff_Applier"]

[connection signal="on_init" from="." to="weapon_offset/weapon_parent/hurtbox_Area2D" method="init"]
[connection signal="on_init_state_machine" from="." to="StateAttackSequence" method="init"]
[connection signal="body_entered" from="weapon_offset/weapon_parent/hurtbox_Area2D" to="weapon_offset/weapon_parent/hurtbox_Area2D" method="_on_body_entered"]
[connection signal="on_exit" from="ultimate_swinging" to="." method="swing_count_up"]
